# promptvault

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.in  requirements.in
docs/: usage.md
docs/plans/: 0001__2026-03-25__implementation_plan__claude-prompt-library.md  0001__2026-03-25__research__claude-prompt-library.md
promptvault/: __init__.py  hook.py  search.py  sync.py
promptvault/shell/: pv-widget.bash  pv-widget.zsh
tests/: conftest.py  test_e2e.py  test_hook.py  test_search.py  test_search_coverage.py  test_sync.py  visual_test.py
